# smart-plant-monitor

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/inc/: AppContext.hpp  ConnectionManager.hpp  IrrigationController.hpp  SensorManager.hpp
app/inc/controllers/: ConnectionController.hpp  IrrigationController.hpp  SensorController.hpp
app/inc/tasks/: ButtonTask.hpp  LedTask.hpp  NetworkTask.hpp  SensorTask.hpp  TaskConfig.hpp  TaskEntry.hpp  WifiTask.hpp
app/src/: AppContext.cpp  AppTasks.cpp  ConnectionManager.cpp  Hooks.cpp  SensorManager.cpp  main.cpp
app/src/controllers/: ConnectionController.cpp  IrrigationController.cpp  SensorController.cpp
app/src/tasks/: ButtonTask.cpp  LedTask.cpp  NetworkTask.cpp  SensorTask.cpp  TaskEntry.cpp  WifiTask.cpp
config/: CMakeLists.txt  Config.hpp  lwipopts.h
inc/: AppTasks.hpp  Config.hpp  ConnectionManager.hpp  EnvironmentalSensor.hpp  FlashManager.hpp  HomeAssistantClient.hpp  IrrigationController.hpp  MQTTClient.hpp  Types.hpp  WifiProvisioner.hpp
include/: AppTasks.h  BME280.h  Config.h  DataLogger.h  EnvironmentalSensor.h  FlashManager.h  FreeRTOSConfig.h  HallSensor.h  HomeAssistantClient.h  IrrigationController.h  LightSensor.h  ResistiveWaterLevelSensor.h  SensorManager.h  SoilMoistureSensor.h  Types.h  WaterLevelSensor.h  WifiProvisioner.h  lwipopts.h
network/: CMakeLists.txt
network/inc/: MQTTClient.hpp  MqttTransport.hpp  WifiDriver.hpp  dhcpserver.h
network/src/: MQTTClient.cpp  MqttTransport.cpp  WifiDriver.cpp  dhcpserver.c
py/: wifi_provision_test.py
sensors/: CMakeLists.txt
sensors/inc/: EnvironmentalSensor.hpp  LightSensor.hpp  SoilMoistureSensor.hpp  WaterLevelSensor.hpp
sensors/src/: EnvironmentalSensor.cpp  LightSensor.cpp  SoilMoistureSensor.cpp  WaterLevelSensor.cpp
src/: AppTasks.cpp  BME280.cpp  ConnectionManager.cpp  DataLogger.cpp  EnvironmentalSensor.cpp  FlashManager.cpp  HallSensor.cpp  HomeAssistantClient.cpp  IrrigationController.cpp  LightSensor.cpp  MQTTClient.cpp  ResistiveWaterLevelSensor.cpp  SensorManager.cpp  SoilMoistureSensor.cpp  WaterLevelSensor.cpp  WifiProvisioner.cpp  main.cpp
src/web/: connecting_page.hpp  provision_page.hpp  provision_page.html  success_page.hpp
tests/: CMakeLists.txt  bh1750Test.cpp  bme280Test.cpp  hw103Test.cpp  ledTest.cpp  se054Test.cpp  waterLevelTest.cpp  waterPumpTest.cpp
utils/: CMakeLists.txt
utils/inc/: Common.hpp  FlashManager.hpp  Types.hpp
utils/src/: Common.cpp  FlashManager.cpp
web/: CMakeLists.txt  provision_page.html
